2276
cannot reproduce this. i get
```scala
scala> import scala.collection.JavaConversions.asMap
import scala.collection.JavaConversions.asMap

scala> val jmap = new java.util.HashMap[String,Int]()
jmap: java.util.HashMap[String,Int] = {}

scala> jmap("one") = 1
<console>:7: error: value update is not a member of java.util.HashMap[String,Int]
       jmap("one") = 1
       ^

scala> jmap("one")
<console>:7: error: jmap of type java.util.HashMap[String,Int] does not take parameters
       jmap("one")
           ^
```
